[metadata]
name = visium_analysis
version = 0.1
description = visium_analysis: An example of how visium slides could be analyzed
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ismms-himc/visium_analysis
author = Emir Radkevich
author_email = emir.radkevich@mssm.edu

[options]
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
decoupler>=1.3.4
numpy>=1.23.5
pandas>=1.5.3
scanpy>=1.9.1
scikit-learn>=1.2.0
scipy>=1.10.1
squidpy>=1.2.3
statsmodels>=0.13.5
