[metadata]
name = visium_analysis
version = 0.1
description = visium_analysis: An example of how visium slides could be analyzed
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ismms-himc/visium_analysis
author = Emir Radkevich
author_email = emir.radkevich@mssm.edu
license = MIT

[options]
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    squidpy>=1.2.0
    decoupler>=1.5.0
